--- a/master/index.html
+++ b/master/index.html
@@ -79,16 +79,17 @@
 <p>Gw2Sharp is an client API wrapper around the <a href="https://api.guildwars2.com/">official Guild Wars 2 API</a> for .NET.
 It&#39;s asynchronous and multi-platform thanks to .NET Standard.</p>
 <p>At the moment this documention site is a work in progress.
-You can already view the automatically generator docs, however there are no examples yet.</p>
+Be sure to check the <a href="guides/introduction.html">introduction</a>!</p>
 <h3 id="features">Features</h3>
-<p>For the list of supported endpoints, check the <a href="features.html">Endpoint Feature List</a>.</p>
+<p>For the list of supported endpoints, check the <a href="features.html">endpoint feature list</a>.</p>
 <h3 id="additional-resources">Additional resources</h3>
 <ul>
-<li><a href="">GW2 Development Community Discord</a> - Discussions about Gw2Sharp and other projects</li>
+<li><a href="https://discord.gg/hNcpDT3">GW2 Development Community Discord</a> - Discussions about Gw2Sharp and other API related projects</li>
 <li><a href="https://wiki.guildwars2.com/wiki/API">Guild Wars 2 Wiki</a> - Community Wiki articles about the API</li>
 <li><a href="https://github.com/Archomeda/Gw2Sharp">GitHub repository</a></li>
-<li><a href="">NuGet feed</a></li>
-<li><a href="https://ci.appveyor.com/project/Archomeda/Gw2Sharp">AppVeyor CI</a> - Nightly builds via Continuous Integration</li>
+<li><a href="https://www.nuget.org/packages/Gw2Sharp/">NuGet feed</a></li>
+<li><a href="https://gitlab.com/Archomeda/Gw2Sharp/pipelines">GitLab Pipeline</a> - Nightly builds via Continuous Integration</li>
+<li><a href="https://ci.appveyor.com/project/Archomeda/Gw2Sharp">AppVeyor CI</a> - Automatic tests via Continuous Integration</li>
 </ul>
 </article>
           </div>
