--- a/master/guides/subtokens.html
+++ b/master/guides/subtokens.html
@@ -93,6 +93,9 @@
                           <li class="">
                             <a href="introduction.html" title="Introduction" class="">Introduction</a>
                           </li>
+                          <li class="active">
+                            <a href="subtokens.html" title="Subtokens" class="active">Subtokens</a>
+                          </li>
                         </ul>  </li>
                   </ul>        </div>
               </div>
