Update documentation for master (fb7a4a78)

--- a/master/guides/endpoints.html
+++ b/master/guides/endpoints.html
@@ -136,7 +136,7 @@ For your convenience, the following list gives an overview of the endpoints that
 </tr>
 <tr>
 <td>❌✨</td>
-<td>Not implemented yet, because it uses the new API versioning system</td>
+<td>Not implemented yet, recent addition to the API</td>
 </tr>
 <tr>
 <td>✖️</td>
@@ -297,6 +297,11 @@ For your convenience, the following list gives an overview of the endpoints that
 <td><a href="../api/Gw2Sharp.WebApi.V2.Clients.AccountMountsTypesClient.html"><code>Gw2WebApiClient.V2.Account.Mounts.Types</code></a></td>
 </tr>
 <tr>
+<td> /v2/account/novelties</td>
+<td>❌✨</td>
+<td></td>
+</tr>
+<tr>
 <td> /v2/account/outfits</td>
 <td>✔️🔑📆</td>
 <td><a href="../api/Gw2Sharp.WebApi.V2.Clients.AccountOutfitsClient.html"><code>Gw2WebApiClient.V2.Account.Outfits</code></a></td>
@@ -430,6 +435,11 @@ For your convenience, the following list gives an overview of the endpoints that
 <td> /v2/characters/<code>:id</code>/inventory</td>
 <td>✔️🔑📆</td>
 <td><a href="../api/Gw2Sharp.WebApi.V2.Clients.CharactersIdInventoryClient.html"><code>Gw2WebApiClient.V2.Characters[id].Inventory</code></a></td>
+</tr>
+<tr>
+<td> /v2/characters/<code>:id</code>/quests</td>
+<td>❌✨</td>
+<td></td>
 </tr>
 <tr>
 <td> /v2/characters/<code>:id</code>/recipes</td>
@@ -762,6 +772,11 @@ For your convenience, the following list gives an overview of the endpoints that
 <td></td>
 </tr>
 <tr>
+<td> /v2/novelties</td>
+<td>❌✨</td>
+<td></td>
+</tr>
+<tr>
 <td> /v2/outfits</td>
 <td>❌</td>
 <td></td>
@@ -839,6 +854,11 @@ For your convenience, the following list gives an overview of the endpoints that
 <tr>
 <td> /v2/quaggans</td>
 <td>❌</td>
+<td></td>
+</tr>
+<tr>
+<td> /v2/quests</td>
+<td>❌✨</td>
 <td></td>
 </tr>
 <tr>
