Update documentation for master (c5b8dfdc)

--- a/master/guides/http-headers.html
+++ b/master/guides/http-headers.html
@@ -99,6 +99,9 @@
                           <li class="">
                             <a href="subtokens.html" title="Subtokens" class="">Subtokens</a>
                           </li>
+                          <li class="">
+                            <a href="exception-handling.html" title="Exception handling" class="">Exception handling</a>
+                          </li>
                           <li class="active">
                             <a href="http-headers.html" title="HTTP headers" class="active">HTTP headers</a>
                           </li>
