--- a/master/guides/subtokens.html
+++ b/master/guides/subtokens.html
@@ -100,6 +100,9 @@
                             <a href="subtokens.html" title="Subtokens" class="active">Subtokens</a>
                           </li>
                           <li class="">
+                            <a href="exception-handling.html" title="Exception handling" class="">Exception handling</a>
+                          </li>
+                          <li class="">
                             <a href="http-headers.html" title="HTTP headers" class="">HTTP headers</a>
                           </li>
                           <li class="">
