Update documentation for master (6a74b885)

--- a/master/guides/exception-handling.html
+++ b/master/guides/exception-handling.html
@@ -99,14 +99,17 @@
                           <li class="">
                             <a href="subtokens.html" title="Subtokens" class="">Subtokens</a>
                           </li>
-                          <li class="active">
-                            <a href="exception-handling.html" title="Exception handling" class="active">Exception handling</a>
-                          </li>
                           <li class="">
                             <a href="http-headers.html" title="HTTP headers" class="">HTTP headers</a>
                           </li>
                           <li class="">
                             <a href="last-modified.html" title="Last-Modified" class="">Last-Modified</a>
+                          </li>
+                          <li class="active">
+                            <a href="exception-handling.html" title="Exception handling" class="active">Exception handling</a>
+                          </li>
+                          <li class="">
+                            <a href="symbols.html" title="Debug symbols" class="">Debug symbols</a>
                           </li>
                         </ul>  </li>
                   </ul>        </div>
