--- a/master/guides/last-modified.html
+++ b/master/guides/last-modified.html
@@ -100,13 +100,16 @@
                             <a href="subtokens.html" title="Subtokens" class="">Subtokens</a>
                           </li>
                           <li class="">
-                            <a href="exception-handling.html" title="Exception handling" class="">Exception handling</a>
-                          </li>
-                          <li class="">
                             <a href="http-headers.html" title="HTTP headers" class="">HTTP headers</a>
                           </li>
                           <li class="active">
                             <a href="last-modified.html" title="Last-Modified" class="active">Last-Modified</a>
+                          </li>
+                          <li class="">
+                            <a href="exception-handling.html" title="Exception handling" class="">Exception handling</a>
+                          </li>
+                          <li class="">
+                            <a href="symbols.html" title="Debug symbols" class="">Debug symbols</a>
                           </li>
                         </ul>  </li>
                   </ul>        </div>
