Update documentation for master (783556bc)

--- a/master/guides/exception-handling.html
+++ b/master/guides/exception-handling.html
@@ -91,7 +91,10 @@
                             <a href="introduction.html" title="Introduction" class="">Introduction</a>
                           </li>
                           <li class="">
-                            <a href="endpoints.html" title="Endpoints" class="">Endpoints</a>
+                            <a href="caching.html" title="Caching" class="">Caching</a>
+                          </li>
+                          <li class="">
+                            <a href="services.html" title="Supported services" class="">Supported services</a>
                           </li>
                           <li class="">
                             <a href="parameterized-endpoints.html" title="Parameterized endpoints" class="">Parameterized endpoints</a>
