--- a/master/guides/parameterized-endpoints.html
+++ b/master/guides/parameterized-endpoints.html
@@ -91,7 +91,10 @@
                             <a href="introduction.html" title="Introduction" class="">Introduction</a>
                           </li>
                           <li class="">
-                            <a href="endpoints.html" title="Endpoints" class="">Endpoints</a>
+                            <a href="caching.html" title="Caching" class="">Caching</a>
+                          </li>
+                          <li class="">
+                            <a href="services.html" title="Supported services" class="">Supported services</a>
                           </li>
                           <li class="active">
                             <a href="parameterized-endpoints.html" title="Parameterized endpoints" class="active">Parameterized endpoints</a>
@@ -128,13 +131,13 @@ In order to make them intuitive and easily accessible, you can access them with 
 <pre><code class="lang-cs">// Assuming you already have a client
 
 // The full list of characters
-var characters = await client.V2.Characters.AllAsync();
+var characters = await client.WebApi.V2.Characters.AllAsync();
 
 // One character
-var character = await client.V2.Characters[&quot;Your Character Name&quot;].GetAsync();
+var character = await client.WebApi.V2.Characters[&quot;Your Character Name&quot;].GetAsync();
 
 // Accessing a subendpoint of a character
-var specializations = await client.V2.Characters[&quot;Your Character Name&quot;].Specializations.GetAsync();
+var specializations = await client.WebApi.V2.Characters[&quot;Your Character Name&quot;].Specializations.GetAsync();
 </code></pre></article>
           </div>
           
